@@ -71,6 +71,6 @@
          "web" : "https://github.com/kablamo/p5-chef-knife-cmd"
       }
    },
-   "version" : "0.02",
+   "version" : "0.03",
    "x_authority" : "cpan:KABLAMO"
 }
